Don't error out on unknown units

We won't be able to convert them, but we should just keep them.

https://bugzilla.gnome.org/show_bug.cgi?id=777517